...
                android:paddingLeft="4dp"
                android:text="2015" />

        </LinearLayout>

        <ImageButton
            android:id="@+id/datepicker_arrow_right"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="?attr/selectableItemBackground"
            android:src="@drawable/arrow_calendar_right" />

    </LinearLayout>

    <com.etb.app.widget.datepicker.DayPickerViewPager
        android:id="@+id/datepicker_day"
        style="?attr/libHotelsDatePickerViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="228dp" />
</LinearLayout>
